2012-10-14  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-bi-attrs.h: Remove file.
	* d-builtins.c(d_attribute_table): Define table of machine independant
	attributes for gcc builtins.
	(d_format_attribute_table): Define table of format attributes for gcc
	builtins.
	(handle_noreturn_attribute, handle_leaf_attribute,
	handle_const_attribute, handle_malloc_attribute,
	handle_returns_twice_attribute, handle_pure_attribute,
	handle_novops_attribute, get_nonnull_operand,
	handle_nonnull_attribute, handle_nothrow_attribute,
	handle_sentinel_attribute, handle_type_generic_attribute,
	handle_fnspec_attribute, handle_transaction_pure_attribute,
	ignore_attribute): Moved common attribute handlers from d-bi-attrs.h.
	* d-lang.cc(LANG_HOOKS_ATTRIBUTE_TABLE): Use instead of
	LANG_HOOKS_COMMON_ATTRIBUTE_TABLE.
	(d_attribute_table): Renamed from d_common_attribute_table.
	(d_format_attribute_table): Renamed from
	d_common_format_attribute_table.
	(d_init_ts): Renamed from d_common_init_ts.

	* d-builtins2.cc(d_bi_init): Determine D frontend type for size_t.
	* d-objfile.cc(ObjectFile::hasModule): Remove old compatibility
	macros.

2012-10-08  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-glue.cc(VectorExp::toElem): Handle non-constant array literals as
	vector expressions.

2012-10-04  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-glue.cc(VectorExp::toElem): Handle both array literal as well as
	single element constructors for vector expressions.

2012-09-27  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-convert.cc(convert): Remove assert.

2012-09-22  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::maybeCompound): Use IRState::compound.
	(IRState::maybeVoidCompound): Use IRState::voidCompound.
	(IRState::call): Check TREE_SIDE_EFFECTS to determine order of
	evaluation in function calls.  Evaluate callee before arguments if has
	side effects.
	* d-decls.cc(FuncDeclaration::toSymbol): Don't set any pure/nothrow
	attributes if asserts are generated in code.