@@ -1,3 +1,8 @@
+2012-10-16  Iain Buclaw  <ibuclaw@ubuntu.com>
+
+	* d-objfile.cc(ObjectFile::outputThunk): Mark thunk as DECL_WEAK
+	rather than using weakref attribute.
+
 2012-10-14  Iain Buclaw  <ibuclaw@ubuntu.com>
 
 	* d-bi-attrs.h: Remove file.
